# nanogptrs

./: .dockerignore  .gitignore  BUILD.sh  Cargo.toml  README.md  TENSORBOARD.sh  deny.toml  environment.yml
.cargo/: config.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.devcontainer/cpued/: devcontainer.json
.devcontainer/gpuless/: devcontainer.json
.github/workflows/: rust.yml
data/: README.md  download.sh
models/: download.sh
src/: actions.rs  config.rs  data.rs  estimate.rs  learn.rs  lib.rs  main.rs  model.rs
src/learn/: logger.rs  mod.rs
src/model/: bigram.rs  mod.rs  nano.rs
