[package]
name = "nanogptrs"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
publish = false

description = "A simple language model using the tch-rs library"
repository = "https://github.com/ssoudan/nanogptrs"
license = "MIT/Apache-2.0"
keywords = ["pytorch", "deep-learning", "machine-learning", "language-model" ]
categories = ["science"]
readme = "README.md"

[features]
default = []
tch_download = ["tch/default"]

[dependencies]
tch = { version = "0.11.0", default-features = false, features = [] }
rand = "0.8.5"
rand_chacha = "0.3.1"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
clap = { version = "4.2.7", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.3.1"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = false
