[package]
name = "nanogptrs"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
publish = false

description = "A simple language model using the tch-rs library"
repository = "https://github.com/ssoudan/nanogptrs"
license = "MIT/Apache-2.0"
keywords = ["pytorch", "deep-learning", "machine-learning", "language-model"]
categories = ["science"]
readme = "README.md"

[features]
default = []
tch_download = ["tch/download-libtorch"]

[dependencies]
tch = { version = "0.13.0", default-features = false, features = [] }
rand = "0.8.5"
rand_chacha = "0.3.1"
indicatif = { version = "0.17.5", features = ["improved_unicode"] }
tokenizers = { version = "*" }
clap = { version = "4.3.19", features = ["derive"] }
tensorboard-rs = "0.5.9"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
itertools = "0.11.0"
rayon = "1.7.0"

[dev-dependencies]
rand_chacha = "0.3.1"
serial_test = "*"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = false
